--- a/src/client/app/cnext/framework/complexities/complexities.component.scss
+++ b/src/client/app/cnext/framework/complexities/complexities.component.scss
@@ -15,7 +15,7 @@ $theme-color: #0d75fa;
   .heading-compact {
     background: $theme-color;
     color: $white;
-    margin: 0;
+    margin: 0 0 5px;
     padding: 5px 15px;
   }
 
