--- a/src/client/css/c-next/common-components/cn-guided-tour.scss
+++ b/src/client/css/c-next/common-components/cn-guided-tour.scss
@@ -1,10 +1,12 @@
 .guided-tour {
   margin: 65px 15px 0;
+  position: fixed;
+  z-index: 10001;
 
   .inner {
     padding: 0;
     width: 75%;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -53,7 +55,7 @@
   }
 
   .modal-background {
-    position: absolute;
+    position: fixed;
     height: 100vh;
     width: 100%;
     top: 0;
