--- a/src/client/css/c-next/common-components/profile-creator.scss
+++ b/src/client/css/c-next/common-components/profile-creator.scss
@@ -50,6 +50,18 @@ $pink: #e91d62;
 .create-profile {
   .page-header {
     background: transparent !important;
+    border-bottom: 1px solid transparent !important;
+    margin-top: 10px !important;
+
+    .last-child {
+      .dropdown-menu {
+        margin-top: 25px !important;
+      }
+    }
+  }
+
+  .navbar {
+    margin: 13px 0 0 !important;
   }
 }
 
@@ -423,8 +435,8 @@ $pink: #e91d62;
     color: $pink;
     width: 100%;
     height: 100%;
-    padding: 5px 13px;
-    border: 1px solid $pink;
+    padding: 3px 11px;
+    border: 2px solid $pink;
     font-weight: 900;
     margin-right: -1px;
     border-radius: 50%;
@@ -433,7 +445,7 @@ $pink: #e91d62;
   input:checked + span {
     background: $white;
     color: $white;
-    border: 1px solid $pink;
+    border: 2px solid $pink;
   }
 }
 
@@ -451,7 +463,7 @@ $pink: #e91d62;
   .main-content {
     .btn-default {
       float: none;
-      margin: 10px 0 0;
+      margin: 0;
     }
 
     .instructions {
