--- a/src/client/css/c-next/theme/cn-theme.scss
+++ b/src/client/css/c-next/theme/cn-theme.scss
@@ -168,7 +168,7 @@ $black: #000;
   }
   //cn-create profile
   .profile-header {
-    background: $cn-theme-color;
+    background: $black;
   }
 
   .profile-wrapper {
